--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@ body::before {
 }
 
 header {
-    width: 80%;
+    width: 750px;
+    max-width: 90%;
     margin: 0 auto;
     padding-top: 100px;
     text-align: center;
@@ -43,7 +44,8 @@ header img {
 }
 
 form {
-    width: 80%;
+    width: 750px;
+    max-width: 90%;
     margin: 0 auto 150px;
     padding-bottom: 64px;
     background: #FFF;
@@ -52,13 +54,13 @@ form {
 
 fieldset {
     border: none;
-    padding: 0 64px;
+    padding: 0 20px;
 }
 
 .fieldset-wrapper {
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 15px;
 }
 
 fieldset legend {
@@ -75,7 +77,7 @@ fieldset legend {
     max-width: unset;
     height: 133px;
     border-radius: 20px 20px 0 0;
-    margin: 0 -64px;
+    margin: 0 -20px;
     display: flex;
     justify-content: center;
     align-items: center;
